# crickit

./: .gitignore  crickit.md  handoff.md  handoff2.md
.claude/commands/: crickit.md
bridges/vscode/: .vscodeignore  package-lock.json  package.json
bridges/vscode/src/: extension.ts  server.ts
examples/: buggy.py
python/: pyproject.toml
python/cli/: pyproject.toml
python/cli/src/crickit_cli/: main.py
python/core/: pyproject.toml
python/core/src/crickit_core/: __init__.py  client.py  models.py  state.py  transcript.py
transcripts/: buggy-zerodivision.json
