[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crickit-cli"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "crickit-core",
]

[project.scripts]
crickit = "crickit_cli.main:cli"

[tool.uv.sources]
crickit-core = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/crickit_cli"]
